# rm01OrinStatus

./: .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  PROJECT_RESTRUCTURE_SUMMARY.md  README.md  README_old.md  esp32s3_example.cpp  esp32s3_websocket_example.cpp  pyproject.toml  requirements.txt  tegrastats-api.service.template  test.html
.github/workflows/: ci-old.yml  ci.yml
docs/: API_REFERENCE.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  INSTALLATION_GUIDE.md  INSTALL_CONFIG.md  INSTALL_GUIDE.md  PROJECT_RESTRUCTURE_SUMMARY.md  PROJECT_SUMMARY.md  QUICKSTART.md  QUICK_START.md  README.md  UPDATE_SUMMARY.md  WHEEL_BUILD_GUIDE.md  arduino_libraries.md
examples/: compare_apis.py  examples.py
scripts/: build_wheel.sh  create_conda_package.sh  full_verification.sh  install.sh  manage_tegrastats.sh  test_all_installations.sh  uninstall.sh
src/tegrastats_api/: __init__.py  cli.py  config.py  parser.py  server.py
tests/: test_simple_ws.py  test_websocket.py  test_websocket_debug.py
utils/: tegrastats_parser.py
